Styles to solve problem of Invite Seller message overlapping search bar heading

--- a/web/src/stylesheets/Entropy/components/_exchange-search-filters.scss
+++ b/web/src/stylesheets/Entropy/components/_exchange-search-filters.scss
@@ -4,6 +4,7 @@
   background: transparent;
   border-radius: 0;
   margin-bottom: 2rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
   position: relative;
